--- a/app/src/main/res/layout/data_list_view.xml
+++ b/app/src/main/res/layout/data_list_view.xml
@@ -15,10 +15,10 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/entry_id_text"
+        android:id="@+id/entry_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EntryID"
+        android:text="EntryDate"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="EntryValue"
-        app:layout_constraintStart_toEndOf="@+id/entry_id_text"
+        app:layout_constraintStart_toEndOf="@+id/entry_date"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
