--- a/app/src/main/res/layout/fragment_update_entry.xml
+++ b/app/src/main/res/layout/fragment_update_entry.xml
@@ -2,21 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_update_entry"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.addEntryFragment">
 
 
     <TextView
-        android:id="@+id/date_text"
+        android:id="@+id/change_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:hint="Date"
+        android:text="Change date"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/cal_icon"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/cal_icon"
-        app:layout_constraintTop_toTopOf="@+id/cal_icon" />
+        app:layout_constraintTop_toTopOf="@+id/cal_icon"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/update_description_box"
@@ -35,13 +41,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:ems="10"
         android:hint="@string/value_prompt"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cal_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/clock_icon" />
 
     <Button
         android:id="@+id/update_button"
@@ -73,6 +80,28 @@
         android:src="@drawable/ic_baseline_calendar_today_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/clock_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_baseline_access_time_24"
+        app:layout_constraintStart_toStartOf="@+id/cal_icon"
+        app:layout_constraintTop_toBottomOf="@+id/cal_icon" />
+
+    <TextView
+        android:id="@+id/change_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="Change time"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/clock_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/clock_icon"
+        app:layout_constraintTop_toTopOf="@+id/clock_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
