--- a/app/src/main/res/layout/data_list_view.xml
+++ b/app/src/main/res/layout/data_list_view.xml
@@ -19,24 +19,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="EntryDate"
-        android:textSize="30sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/units" />
 
     <TextView
         android:id="@+id/entry_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:text="EntryValue"
-        app:layout_constraintStart_toEndOf="@+id/entry_date"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/entry_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:text="Entry Description"
-        app:layout_constraintStart_toStartOf="@+id/entry_value"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/units"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="units"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/entry_value" />
 </androidx.constraintlayout.widget.ConstraintLayout>
