--- a/app/src/main/res/layout/fragment_update_entry.xml
+++ b/app/src/main/res/layout/fragment_update_entry.xml
@@ -28,6 +28,7 @@
         android:id="@+id/update_description_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="@string/description"
         android:inputType="textShortMessage"
@@ -102,6 +103,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/clock_icon"
         app:layout_constraintTop_toTopOf="@+id/clock_icon" />
+
+    <TextView
+        android:id="@+id/value_units"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:text="units"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/update_value_box"
+        app:layout_constraintTop_toBottomOf="@+id/update_value_box" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
