Units added and working - playing with getting logic for checkbox to work

--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -39,6 +39,9 @@
         <argument
             android:name="currentEntry"
             app:argType="com.example.lifestats.data.Entry" />
+        <argument
+            android:name="currentEntryValue"
+            app:argType="com.example.lifestats.data.EntryValue[]" />
     </fragment>
     <fragment
         android:id="@+id/dashboard"
