--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -40,4 +40,13 @@
             android:name="currentEntry"
             app:argType="com.example.lifestats.data.Entry" />
     </fragment>
+    <fragment
+        android:id="@+id/dashboardFragment"
+        android:name="com.example.lifestats.fragments.dashboardFragment"
+        android:label="fragment_dashboard"
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_dashboardFragment_to_entryFragment"
+            app:destination="@id/entryFragment" />
+    </fragment>
 </navigation>
