--- a/app/src/main/res/layout/fragment_update_entry.xml
+++ b/app/src/main/res/layout/fragment_update_entry.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_update_entry"
+    android:label="@string/update_entry"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.addEntryFragment">
