--- a/app/src/main/res/layout/data_list_view.xml
+++ b/app/src/main/res/layout/data_list_view.xml
@@ -38,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
+        android:maxLines="2"
+        android:maxLength="28"
         android:text="Entry Description"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
